fix: prevent white flickering on scroll

--- a/src/main.css
+++ b/src/main.css
@@ -80,4 +80,5 @@ body,
   margin: 0;
   padding: 0;
   font-family: var(--font-primary);
+  background-color: var(--color-very-dark-green);
 }
